tests/tagged-unions/tagged-unions.exp
Error --------------------------------------------------- interfaces-neg.js:25:4

Cannot cast `data` to `ISystemData` because in property `kind`, string literal
`user` is incompatible with string literal `system`.

Error: interfaces-neg.js:25
 25:   (data: ISystemData);
        ^^^^ Cannot cast `data` to `ISystemData` because in property `kind`, string literal `user` [1] is incompatible with string literal `system` [2].
  References:
    9:   kind: "user",
               ^^^^^^ [1]: string literal `user`
   13:   kind: "system",
               ^^^^^^^^ [2]: string literal `system`

Error --------------------------------------------------- type-decls-neg.js:29:4

Cannot cast `data` to `SystemData` because in property `kind`, string literal
`user` is incompatible with string literal `system`.

Error: type-decls-neg.js:29
 29:   (data: SystemData);
        ^^^^ Cannot cast `data` to `SystemData` because in property `kind`, string literal `user` [1] is incompatible with string literal `system` [2].
  References:
   11:   kind: "user",
               ^^^^^^ [1]: string literal `user`
   17:   kind: "system",
               ^^^^^^^^ [2]: string literal `system`


Found 2 errors
